objects/TEMarketing__MQLRecord__c.object
<CustomObject>
    <fields>
        <fullName>TEMarketing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MQLRecords</relationshipLabel>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Conversion_Date__c</fullName>
        <label>Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Days_To_Opportunity_Creation__c</fullName>
        <formula>TEMarketing__Opportunity__r.CreatedDate -  TEMarketing__MQL_Date__c</formula>
        <label>Days To Opportunity Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Days_from_MQL_to_SAL__c</fullName>
        <formula>TEMarketing__SAL_Date__c - TEMarketing__MQL_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from MQL to SAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Days_from_Opp_Creation_to_Close__c</fullName>
        <formula>TEMarketing__Opportunity__r.CloseDate - DATEVALUE(TEMarketing__Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Opp Creation to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Days_to_be_Actioned_by_Sales_Rep__c</fullName>
        <description>Days to be action by a Sales Rep.  Only populated if the Assigned to Sales Rep Date has a value.</description>
        <formula>IF((!ISBLANK(TEMarketing__SAL_Date__c) || !ISBLANK(TEMarketing__Conversion_Date__c) || !ISBLANK(TEMarketing__Rejected_Date__c) || !ISBLANK( TEMarketing__Passed_to_Primary_Date__c )) &amp;&amp; !ISBLANK(TEMarketing__Assigned_to_Sales_Rep_Date__c),
MIN(
IF(ISBLANK( TEMarketing__Passed_to_Primary_Date__c ), 9999999999,TEMarketing__Passed_to_Primary_Date__c - TEMarketing__Assigned_to_Sales_Rep_Date__c),
IF(ISBLANK(TEMarketing__SAL_Date__c), 9999999999,TEMarketing__SAL_Date__c - TEMarketing__Assigned_to_Sales_Rep_Date__c),
IF(ISBLANK(TEMarketing__Conversion_Date__c), 9999999999,TEMarketing__Conversion_Date__c - TEMarketing__Assigned_to_Sales_Rep_Date__c),
IF(ISBLANK(TEMarketing__Rejected_Date__c), 9999999999,TEMarketing__Rejected_Date__c - TEMarketing__Assigned_to_Sales_Rep_Date__c))
, NULL)</formula>
        <label>Days to be Actioned by Sales Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Days_to_be_actioned__c</fullName>
        <description>Checks to see if one of our actioned fields is not blank, then sees which one is the smallest time.  This determines the shortest time to action.</description>
        <formula>IF(!ISBLANK(TEMarketing__SAL_Date__c) || !ISBLANK(TEMarketing__Conversion_Date__c) || !ISBLANK(TEMarketing__Rejected_Date__c) || !ISBLANK( TEMarketing__Passed_to_Primary_Date__c ),
MIN(
IF(ISBLANK( TEMarketing__Passed_to_Primary_Date__c ), 9999999999,TEMarketing__Passed_to_Primary_Date__c - TEMarketing__MQL_Date__c),
IF(ISBLANK(TEMarketing__SAL_Date__c), 9999999999,TEMarketing__SAL_Date__c - TEMarketing__MQL_Date__c),
IF(ISBLANK(TEMarketing__Conversion_Date__c), 9999999999,TEMarketing__Conversion_Date__c - TEMarketing__MQL_Date__c),
IF(ISBLANK(TEMarketing__Rejected_Date__c), 9999999999,TEMarketing__Rejected_Date__c - TEMarketing__MQL_Date__c))
, NULL)</formula>
        <label>Days to be Actioned by Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Distributor_Routing_Method__c</fullName>
        <description>How the MQL Record was routed to a distributor.  Set by flows.</description>
        <inlineHelpText>How the MQL Record was routed to a distributor.</inlineHelpText>
        <label>Distributor Routing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Round Robin (Automatic)</fullName>
                </value>
                <value>
                    <fullName>Round Robin (Manual)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Email__c</fullName>
        <formula>IF( ISBLANK(TEMarketing__Contact__r.Email), TEMarketing__Lead__r.Email, TEMarketing__Contact__r.Email )</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Focus_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Full_Name__c</fullName>
        <formula>IF(ISBLANK(TEMarketing__Contact__c),  TEMarketing__Lead__r.FirstName + &apos; &apos; +  TEMarketing__Lead__r.LastName,  TEMarketing__Contact__r.FirstName + &apos; &apos; +  TEMarketing__Contact__r.LastName )</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Has_Opportunity__c</fullName>
        <formula>NOT(OR(ISNULL( TEMarketing__Opportunity__c ),  ISBLANK(TEMarketing__Opportunity__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Has_SAL_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has SAL&apos;d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Initial_Routing_Method__c</fullName>
        <description>How the MQL Record was initially routed</description>
        <inlineHelpText>How the MQL Record was initially routed</inlineHelpText>
        <label>Initial Routing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Direct Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Inquiry_Status__c</fullName>
        <defaultValue>&quot;Marketing Qualified&quot;</defaultValue>
        <label>Inquiry Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_Actioned__c</fullName>
        <formula>TEMarketing__Inquiry_Status__c!= &apos;Response&apos; &amp;&amp; TEMarketing__Inquiry_Status__c!= &apos;Marketing Qualified&apos;</formula>
        <label>Is Actioned by Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_Actioned_by_Preferred_Dist__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the MQL been actioned by the primary distributor?</inlineHelpText>
        <label>Is Actioned by Preferred Dist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_Actioned_by_Sales_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Actioned by Sales Dev?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_Actioned_by_Secondary_Dist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Actioned by Secondary Dist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_Rejected__c</fullName>
        <formula>NOT(ISNULL( TEMarketing__Rejected_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Won?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>MQLRecords</relationshipLabel>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Notification_Account_Name__c</fullName>
        <formula>IF(ISBLANK(TEMarketing__Contact__c), TEMarketing__Lead__r.Company , TEMarketing__Contact__r.Account.Name)</formula>
        <label>Notification Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Notification_Link__c</fullName>
        <formula>IF(ISBLANK(TEMarketing__Contact__c), 
IF( TEMarketing__Owner_Licence_Type__c = &apos;Partner Community&apos;,  
$Setup.TEMarketing__me_utility__c.TEMarketing__Community_Portal_URL__c + TEMarketing__Lead__c  ,
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + TEMarketing__Lead__c), 
IF( TEMarketing__Owner_Licence_Type__c = &apos;Partner Community&apos;,  
$Setup.TEMarketing__me_utility__c.TEMarketing__Community_Portal_URL__c + TEMarketing__Contact__c,
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + TEMarketing__Contact__c ))</formula>
        <label>Notification Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Notification_Phone__c</fullName>
        <formula>IF(ISBLANK(TEMarketing__Contact__c), TEMarketing__Lead__r.Phone , TEMarketing__Contact__r.Phone )</formula>
        <label>Notification Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opportunity_Probability__c</fullName>
        <label>Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opportunity_Stage_Name__c</fullName>
        <label>Opportunity Stage Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MQLRecords</relationshipLabel>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Owner_Licence_Type__c</fullName>
        <formula>Owner:User.TEMarketing__User_License_Type__c</formula>
        <label>Owner Licence Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Passed_to_Primary_Date__c</fullName>
        <inlineHelpText>The date that the MQL was passed to the primary distribtuor</inlineHelpText>
        <label>Passed to Primary Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Passed_to_Sales_Development_Date__c</fullName>
        <label>Passed to Sales Development Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Passed_to_Secondary_Date__c</fullName>
        <label>Passed to Secondary Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Primary_Action_Deadline_Date__c</fullName>
        <description>The date/time by which the MQL must be acted upon by the primary distributor</description>
        <inlineHelpText>The deadline for the primary distributor to action the MQL</inlineHelpText>
        <label>Primary Deadline Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Primary_Distributor_Name_Picklist__c</fullName>
        <description>Populated by workflow.  Necessary for colour coding of reports and dashboards.</description>
        <inlineHelpText>Name of the primary distributor.  Used for dashboard chart colours.</inlineHelpText>
        <label>Primary Distributor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Avnet</fullName>
                    <color>#F3D904</color>
                    <label>Avnet</label>
                </value>
                <value>
                    <fullName>Chip One Stop Inc</fullName>
                </value>
                <value>
                    <fullName>Compel International Oy</fullName>
                </value>
                <value>
                    <fullName>Farnell E14</fullName>
                    <color>#A53711</color>
                    <label>Farnell E14</label>
                </value>
                <value>
                    <fullName>Future</fullName>
                    <color>#0B6FCE</color>
                    <label>Future</label>
                </value>
                <value>
                    <fullName>Global Electronics Corp</fullName>
                </value>
                <value>
                    <fullName>Heilind</fullName>
                    <color>#78C953</color>
                    <label>Heilind</label>
                </value>
                <value>
                    <fullName>Kanetsu</fullName>
                </value>
                <value>
                    <fullName>Kyoritsu Dengyo</fullName>
                </value>
                <value>
                    <fullName>Mapro</fullName>
                </value>
                <value>
                    <fullName>Newark</fullName>
                </value>
                <value>
                    <fullName>Nihon Denka Kogyosyo</fullName>
                </value>
                <value>
                    <fullName>RS Components</fullName>
                </value>
                <value>
                    <fullName>Suzuden</fullName>
                </value>
                <value>
                    <fullName>Takagi Shokai</fullName>
                </value>
                <value>
                    <fullName>TTI</fullName>
                    <color>#E27001</color>
                    <label>TTI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Primary_Distributor_Name__c</fullName>
        <description>Populated by workflow.  Necessary for colour coding of reports and dashboards.</description>
        <label>zz - Primary Distributor Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Primary_Distributor_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Necessary to capture point in time information for reporting</description>
        <inlineHelpText>The primary distributor user that received the MQL</inlineHelpText>
        <label>Primary Distributor User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Primary_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary distributor lookup</inlineHelpText>
        <label>Primary Distributor</label>
        <referenceTo>TEMarketing__Distributor__c</referenceTo>
        <relationshipLabel>MQLRecords</relationshipLabel>
        <relationshipName>MQLRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Primary_Met_Deadline__c</fullName>
        <description>Did the primary distributor action the MQL before the deadline</description>
        <formula>TEMarketing__Rejected_Date__c &lt;=  TEMarketing__Primary_Action_Deadline_Date__c ||  TEMarketing__SAL_Date__c &lt;= TEMarketing__Primary_Action_Deadline_Date__c ||  TEMarketing__Opportunity__r.CreatedDate &lt;= TEMarketing__Primary_Action_Deadline_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Did the primary distributor action the MQL before the deadline</inlineHelpText>
        <label>Primary Distributor Met Deadline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Rating__c</fullName>
        <description>MQL Rating of warm or hot.  Used in logic that determines the Distributor deadline.</description>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Region__c</fullName>
        <inlineHelpText>Country, used for MQL routing to distributors</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__SAL_Date__c</fullName>
        <label>SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Sales_Channel__c</fullName>
        <description>This field is populated when we originally determine the Business Unit - it does not change over time.</description>
        <formula>IF(TEMarketing__BU_Channel__c, &apos;Channel&apos;, &apos;Direct&apos;)</formula>
        <label>Original Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Sales_Rep__c</fullName>
        <formula>If(!Isblank(TEMarketing__Contact__c),  TEMarketing__Contact__r.Owner.FirstName + &apos; &apos; + TEMarketing__Contact__r.Owner.LastName,  TEMarketing__Lead__r.Owner:User.FirstName + &apos; &apos; +   TEMarketing__Lead__r.Owner:User.LastName)</formula>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Secondary_Distributor_Name_Picklist__c</fullName>
        <description>Populated by workflow.  Necessary for colour coding of reports and dashboards.</description>
        <label>Secondary Distributor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TTI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Secondary_Distributor_Name__c</fullName>
        <description>Populated by workflow.  Necessary for colour coding of reports and dashboards.</description>
        <label>zz - Secondary Distributor Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Secondary_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Distributor</label>
        <referenceTo>TEMarketing__Distributor__c</referenceTo>
        <relationshipLabel>MQLRecords (Secondary Distributor)</relationshipLabel>
        <relationshipName>MQLRecords1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TempOwnerId__c</fullName>
        <label>TempOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MQLRecord</label>
    <listViews>
        <fullName>ADM_Lead_Queue_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>ADM Lead Queue</label>
        <queue>ADM_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_MQL_Queue_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>ANZ MQL Queue</label>
        <queue>ANZ_MQL_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APAC_MQL_DMM</fullName>
        <booleanFilter>(1 or 2 or 3) and 4</booleanFilter>
        <columns>TEMarketing__MQL_Date__c</columns>
        <columns>TEMarketing__Lead__c</columns>
        <columns>TEMarketing__Contact__c</columns>
        <columns>TEMarketing__Rating__c</columns>
        <columns>TEMarketing__Inquiry_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Business_Unit__c</columns>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>TEMarketing__Has_Opportunity__c</columns>
        <columns>TEMarketing__Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>CTan,DLee,WTawo,AThom,GKara,JVan,MLamm,BHuan,DChou,MKao,chong,yli,CCui</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>CCui,LWang,rchan,RONNIE,jqin,SHe,JWu,KTao,llian,MHan,ZZhou,Skim,jzhao,ichin</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>gwang,Pvan,HLao,XLiu,HChi,SKong,lchen,SKim,swang,jzhao,clee,jzhou,mhung</value>
        </filters>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>channel</value>
        </filters>
        <label>APAC MQL (DMM)</label>
        <language>en_US</language>
        <sharedTo>
            <group>APAC_102297</group>
            <group>APAC_Analysts</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APL_China_Leads_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>Appliances China Leads</label>
        <queue>APL_China_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APL_Japan_Leads_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>Appliances Japan Leads</label>
        <queue>APL_Japan_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AT_MQL_Queue_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>AT MQL Queue</label>
        <queue>AT_MQL_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>TEMarketing__Account__c</columns>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Business_Unit_Subvertical__c</columns>
        <columns>C2S_Sales_Channel__c</columns>
        <columns>Case__c</columns>
        <columns>TEMarketing__Inquiry_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEMarketing__Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Appliance_EMEA_leads_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>Appliance EMEA leads</label>
        <queue>Appliance_EMEA_leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appliance_US_Leads_MQLRecord</fullName>
        <columns>NAME</columns>
        <columns>TEMarketing__Full_Name__c</columns>
        <columns>TEMarketing__Account__c</columns>
        <columns>TEMarketing__Age__c</columns>
        <columns>TEMarketing__BU_Name__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>TEMarketing__Contact__c</columns>
        <columns>Email__c</columns>
        <columns>Industry__c</columns>
        <columns>TEMarketing__Has_Opportunity__c</columns>
        <columns>TEMarketing__Initial_Routing_Method__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>Appliance US Leads</label>
        <language>en_US</language>
        <queue>Appliance_US_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appliances_Admin_Leads_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>Appliances Admin Leads</label>
        <queue>Appliances_Admin_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appliances_Inside_Sales_Americas_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>Appliances Inside Sales - Americas</label>
        <queue>Appliances_Inside_Sales_Americas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appliances_South_America_Leads_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>Appliances South America Leads</label>
        <queue>Appliances_South_America_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C2S_MQLRecord</fullName>
        <filterScope>Queue</filterScope>
        <label>C2S</label>
        <queue>C2S</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CJM_Leads_to_transfer</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>MQL-67048</value>
        </filters>
        <label>CJM Leads to transfer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CJM_MQLs</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>TEMarketing__MQL_Date__c</columns>
        <columns>TEMarketing__BU_Name__c</columns>
        <columns>TEMarketing__Full_Name__c</columns>
        <columns>Email__c</columns>
        <columns>TEMarketing__Region__c</columns>
        <columns>TEMarketing__Inquiry_Status__c</columns>
        <columns>TEMarketing__Lead__c</columns>
        <columns>TEMarketing__Contact__c</columns>
        <columns>TEMarketing__Confidence__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Atkinson,Dunsmuir,Zou,Feng,Gu,Liang,Wu,Necula,Boon,Budnik,Hagdorn,Calloni,Rawel</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Benito,Cook,Kurten,Phillippe,Seasock,Dolan</value>
        </filters>
        <filters>
            <field>TEMarketing__MQL_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/31/2017 12:00 AM</value>
        </filters>
        <label>CJM MQLs by Owner</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MQL-{0}</displayFormat>
        <label>MQLRecord Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MQLRecords</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TEMarketing__Must_have_MQL_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IsBlank(TEMarketing__MQL_Date__c)</errorConditionFormula>
        <errorDisplayField>TEMarketing__MQL_Date__c</errorDisplayField>
        <errorMessage>MQL Record must have an MQL Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TEMarketing__Must_have_lead_or_contact</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEMarketing__Contact__c) &amp;&amp;  ISBLANK(TEMarketing__Lead__c)</errorConditionFormula>
        <errorMessage>All MQLs must be associated to a lead or contact</errorMessage>
    </validationRules>
</CustomObject>